Images: Fix aspect ratio of images on small screens

--- a/src/style.sass
+++ b/src/style.sass
@@ -58,6 +58,7 @@ figure
     margin-right: 0
     img
         max-width: 100%
+        height: auto
         box-shadow: $box-shadow
         border-radius: $border-radius
 
